[package]
name = "secel"
version = "0.0.6"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "SECEL parser"
documentation = "https://docs.rs/secel"
repository = "https://github.com/wisbery/secel.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ascii_tree = "0.1.1"
difference = "2.0.0"
rust_decimal = "1.32.0"
